--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
     "form-data": "^4.0.0",
     "lodash": "^4.17.21",
     "next": "13.1.6",
