--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-plotly.js": "^2.6.0",
     "autoprefixer": "^10.4.13",
     "dprint": "^0.34.5",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
