--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "chart.js": "^4.3.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "date-fns-tz": "^2.0.0",
     "form-data": "^4.0.0",
     "lodash": "^4.17.21",
     "next": "13.1.6",
@@ -23,9 +25,12 @@
     "pathlib-js": "^1.5.0",
     "plotly.js": "^2.18.2",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-plotly.js": "^2.6.0",
+    "react-table": "^7.8.0",
     "server-only": "^0.0.1",
     "typescript": "4.9.5"
   },
