--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
+    "fetch-to-curl": "^0.6.0",
     "form-data": "^4.0.0",
     "lodash": "^4.17.21",
     "next": "13.1.6",
